--- a/views/addToTimeTable.ejs
+++ b/views/addToTimeTable.ejs
@@ -1,7 +1,8 @@
 <%- include('includes/start')%>
-<title>Add to Timetable</title>
 </head>
 <body>
+
+    <%- include('includes/navbar') %>
     <h1>NYI</h1>
 </body>
 </html>
