--- a/views/root.ejs
+++ b/views/root.ejs
@@ -1,7 +1,8 @@
 <%- include('includes/start') %>
-    <title>root</title>
+    
 </head>
 <body>
+    <%- include('includes/navbar') %>
     <h1>hi, welcome to root</h1>
 </body>
 </html>
