not-so basic navbar

--- a/views/root.ejs
+++ b/views/root.ejs
@@ -3,6 +3,8 @@
 </head>
 <body>
     <%- include('includes/navbar') %>
-    <h1>hi, welcome to root</h1>
+    <main>
+        <h2>Hello, this is the root page.</h2>
+    </main>
 </body>
 </html>
