--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,8 +1,6 @@
 <header>
     <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/addToTimeTable">Add to timetable</a></li>
-        </ul>
+        <div><a href="/">Home</a></div>
+        <div><a href="/addToTimeTable">Add to timetable</a></div>
     </nav>
 </header>
