--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <div><a href="/">Home</a></div>
-        <div><a href="/addToTimeTable">Add to timetable</a></div>
+        <a href="/"><div>Home</div></a>
+        <a href="/addToTimeTable"><div>Add to timetable</div></a>
     </nav>
 </header>
