nap választása, kisebb stílus/szöveg módosítások

--- a/views/addToTimeTable.ejs
+++ b/views/addToTimeTable.ejs
@@ -10,11 +10,21 @@
             <input type="text" id="subject" name="subject"><br>
             <label for="shortVer">Rövidítés:</label>
             <input type="text" id="shortVer" name="shortVer" placeholder="nem szükséges"><br>
+            <label for="day">Nap</label>
+            <select id="day">
+                <option value="monday">Hétfő</option>
+                <option value="tuesday">Kedd</option>
+                <option value="wednesday">Szerda</option>
+                <option value="thursday">Csütörtök</option>
+                <option value="friday">Péntek</option>
+                <option value="saturday">Szombat</option>
+                <option value="sunday">Vasárnap</option>
+            </select><br>
             <label for="fromTime">Mettől:</label>
             <input id="fromTime" name="fromTime" type="number" placeholder="órában"></input><br>
             <label for="toTime">Meddig:</label>
             <input id="toTime" name="toTime" type="number" placeholder="órában"></input><br>
-            <input type="submit" value="Küldés">
+            <input type="submit" value="Mentés">
         </form>
     </main>
 </body>
