--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <a href="/"><div>Home</div></a>
-        <a href="/addToTimeTable"><div>Add to timetable</div></a>
+        <a href="/"><div>Órarend</div></a>
+        <a href="/addToTimeTable"><div>Órarend módosítása</div></a>
     </nav>
 </header>
