--- a/views/addToTimeTable.ejs
+++ b/views/addToTimeTable.ejs
@@ -5,7 +5,7 @@
 
     <%- include('includes/navbar') %>
     <main>
-        <form action="soontm" method="post">
+        <form action="soontm" method="post" class="container">
             <label for="subject">Tárgy neve:</label>
             <input type="text" id="subject" name="subject"><br>
             <label for="shortVer">Rövidítés:</label>
