--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,3 +13,43 @@ body{
     background-color: gray;
     color: white;
 }
+
+/*rgb time*/
+.container{
+    max-width: fit-content;
+    max-height: fit-content;
+    margin: auto;
+    position: relative;
+    background-color: gray;
+    padding: 10px;
+}
+
+@property --angle{
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+@keyframes spin{
+    from{
+        --angle: 0deg;
+    }
+    to{
+        --angle: 360deg;
+    }
+}
+
+.container::after, .container::before{
+    content: '';
+    background-image: conic-gradient(from var(--angle), transparent,  red, green, blue, red);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    padding: 15px;
+    border-radius: 15px;
+    animation: 3s spin linear infinite;
+}
