renamed root to home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <body>
     <%- include('includes/navbar') %>
     <main>
-        <h2>Hello, this is the root page.</h2>
+        <h2>Hello, this is the home page.</h2>
     </main>
 </body>
 </html>
