home gets rgb too

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,9 @@
 <body>
     <%- include('includes/navbar') %>
     <main>
-        <h2>Hello, this is the home page.</h2>
+        <div class="container">
+            <h2>Hello, this is the home page.</h2>
+        </div>
     </main>
 </body>
 </html>
