--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,7 +21,8 @@ body{
     margin: auto;
     position: relative;
     background-color: gray;
-    padding: 10px;
+    padding: 30px;
+    border-radius: 15px;
 }
 
 @property --angle{
