--- a/views/includes/start.ejs
+++ b/views/includes/start.ejs
@@ -6,3 +6,4 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/navbar.css"> 
+    <script src="/js/jquery-3.7.1.min.js"></script>
