--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,109 @@
     <%- include('includes/navbar') %>
     <main>
         <div class="container">
-            <h2>Hello, this is the home page.</h2>
+           <table>
+            <th>
+                <td>Hétfő</td>
+                <td>Kedd</td>
+                <td>Szerda</td>
+                <td>Csütörtök</td>
+                <td>Péntek</td>
+                <td>Szombat</td>
+                <td>Vasárnap</td>
+            </th>
+            <tbody>
+                <tr>
+                    <td>8:00</td>
+                    <td>Mat</td>
+                    <td>Ang</td>
+                    <td>Amob</td>
+                    <td>Desk</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>9:00</td>
+                    <td>Ang</td>
+                    <td>Adat</td>
+                    <td>Web</td>
+                    <td>Java</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>10:00</td>
+                    <td>Egyetemi Mat</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>11:00</td>
+                    <td>Szal</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>Tas</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>12:00</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>13:00</td>
+                    <td></td>
+                    <td></td>
+                    <td>tes</td>
+                    <td></td>
+                    <td></td>
+                    <td>al</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>14:00</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>15:00</td>
+                    <td></td>
+                    <td></td>
+                    <td>és</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>16:00</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+           </table>
         </div>
     </main>
 </body>
