--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,3 +54,17 @@ body{
     border-radius: 15px;
     animation: 3s spin linear infinite;
 }
+
+table{
+    border: solid 3px black;
+    border-collapse: collapse;
+    font-size: larger;
+    min-width: fit-content;
+    min-height: fit-content;
+}
+td{
+    min-width: fit-content;
+    min-height: fit-content;
+    border: solid 3px black;
+    border-collapse: collapse;
+}
