--- a/views/addToTimeTable.ejs
+++ b/views/addToTimeTable.ejs
@@ -29,7 +29,7 @@
                         <label for="day">Nap:</label>
                     </td>
                     <td>
-                        <select id="day">
+                        <select id="day" name="day">
                             <option value="-">Kérem válasszon</option>
                             <option value="monday">Hétfő</option>
                             <option value="tuesday">Kedd</option>
