NEM LÁTJA A LESSONST

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,7 +62,7 @@ table{
     min-width: fit-content;
     min-height: fit-content;
 }
-td{
+td, th{
     min-width: fit-content;
     min-height: fit-content;
     border: solid 3px black;
