--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,106 +6,30 @@
     <main>
         <div class="container">
            <table>
-            <th>
-                <td>Hétfő</td>
-                <td>Kedd</td>
-                <td>Szerda</td>
-                <td>Csütörtök</td>
-                <td>Péntek</td>
-                <td>Szombat</td>
-                <td>Vasárnap</td>
-            </th>
+            <tr>
+                <th></th>
+                <th id="monday">Hétfő</th>
+                <th id="tuesday">Kedd</th>
+                <th id="wednesday">Szerda</th>
+                <th id="thursday">Csütörtök</th>
+                <th id="friday">Péntek</th>
+                <th id="saturday">Szombat</th>
+                <th id="sunday">Vasárnap</th>
+            </tr>
             <tbody>
-                <tr>
-                    <td>8:00</td>
-                    <td>Mat</td>
-                    <td>Ang</td>
-                    <td>Amob</td>
-                    <td>Desk</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>9:00</td>
-                    <td>Ang</td>
-                    <td>Adat</td>
-                    <td>Web</td>
-                    <td>Java</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>10:00</td>
-                    <td>Egyetemi Mat</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>11:00</td>
-                    <td>Szal</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>Tas</td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>12:00</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>13:00</td>
-                    <td></td>
-                    <td></td>
-                    <td>tes</td>
-                    <td></td>
-                    <td></td>
-                    <td>al</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>14:00</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>15:00</td>
-                    <td></td>
-                    <td></td>
-                    <td>és</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>16:00</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                <% for (let hour = 8; hour <= 16; hour++) { %>
+                    <tr>
+                        <td><%= hour %>:00</td>
+                        <% ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"].forEach(day => { %>
+                            <td>
+                                <% const lesson = lessons.find(l => l.day === day && parseInt(l.fromTime) === hour); %>
+                                <% if (lesson) { %>
+                                    <%= lesson.subject %> (<%= lesson.shortVer %>)
+                                <% } %>
+                            </td>
+                        <% }) %>
+                    </tr>
+                <% } %>
             </tbody>
            </table>
         </div>
