--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,6 +1,9 @@
 input, select, label, button{
     font-size: large;
-    padding: 10px;
+    padding: 5px;
     margin: 5px;
     border-radius: 5px;
+}
+button{
+    padding: 15px;
 }
