--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
                             <td>
                                 <% const lesson = lessons.find(l => l.day === day && parseInt(l.fromTime) === hour); %>
                                 <% if (lesson) { %>
-                                    <%= lesson.subject %> (<%= lesson.shortVer %>)
+                                    <%= lesson.subject %> (<%= lesson.shortVer %>)<br>Hossz:<%= lesson.lengthTime %> óra
                                 <% } %>
                             </td>
                         <% }) %>
