--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,10 +21,11 @@
                     <tr>
                         <td><%= hour %>:00</td>
                         <% ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"].forEach(day => { %>
-                            <td>
-                                <% const lesson = lessons.find(l => l.day === day && parseInt(l.fromTime) === hour); %>
+                            <% const lesson = lessons.find(l => l.day === day && parseInt(l.fromTime) === hour); %>
+                            <td rowspan="<%= (lesson) ? lesson.lengthTime : '1' %>">
+                            
                                 <% if (lesson) { %>
-                                    <%= lesson.subject %> (<%= lesson.shortVer %>)<br>Hossz:<%= lesson.lengthTime %> óra
+                                    <%= lesson.subject %> (<%= lesson.shortVer %>)
                                 <% } %>
                             </td>
                         <% }) %>
