hopefully last touches

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
         <div class="container">
            <table>
             <tr>
-                <th></th>
+                <th>Óra</th>
                 <th id="monday">Hétfő</th>
                 <th id="tuesday">Kedd</th>
                 <th id="wednesday">Szerda</th>
